hphp/hack/test/typecheck/yield_method.php
<?hh
// Copyright (c) Facebook, Inc. and its affiliates. All Rights Reserved.

class A {
  public function f(): int {
    yield 0;
  }
}
